# claude-cockpit

./: .gitattributes  .gitignore  BACKLOG.md  BRIEF-COCKPIT-V2-CONTINUATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  claude-cockpit-browser.spec  pyproject.toml  restart-backend.ps1  restart.sh  run.py
.claude/commands/: audit-repo.md  build-cockpit.md  push-cockpit.md  review-pr.md  triage-issues.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.husky/: pre-commit
relay/: .dockerignore  .env.example  Dockerfile  requirements.txt
relay/dashboard/: index.html  package-lock.json  package.json  vite.config.js
relay/dashboard/src/: App.jsx  index.css
relay/dashboard/src/components/: TerminalPane.jsx
relay/deploy/: cockpit-relay.service  setup.sh
relay/relay/: auth.py  config.py  main.py  models.py  tunnel_manager.py
relay/relay/routes/: admin.py  api.py  terminal.py  tunnel.py
src/cockpit/: __init__.py  app.py  cli.py  session.py  tracking.py  web_cli.py
src/cockpit/styles/: theme.tcss
web/: .env.example  auth.py  bridge_manager.py  build-sidecar.sh  cockpit-server.spec  cockpit_mcp.py  conpty.py  jsonl_watcher.py  logging_config.py  pty_backend.py  pty_manager.py  requirements.txt  server.py  server_watchdog.py  settings_store.py  tunnel.py  unix_pty.py  usage_tracker.py  watchdog.py  workspace_manager.py  workspace_watcher.py
web/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
web/frontend/src/: App.jsx  index.css  main.jsx
web/frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
web/frontend/src-tauri/capabilities/: default.json  main.json
web/frontend/src-tauri/src/: lib.rs  main.rs
web/frontend/src/__tests__/: App.bridgeEndToast.test.jsx  App.createSessionProvider.test.jsx  App.renameSession.test.jsx  BridgeModal.test.jsx  ErrorBoundary.test.jsx  FleetView.test.jsx  LocalBrokerPanel.test.jsx  OpenRouterModal.test.jsx  PopoutTerminal.paste.test.jsx  PopoutTerminal.resize.test.jsx  Sidebar.footer.test.jsx  TerminalPane.actions.test.jsx  TerminalPane.paste.test.jsx  TerminalPane.resize.test.jsx  TopBar.levers.test.jsx  TopBar.openrouter.test.jsx  TopBar.test.jsx  WorkflowsPanel.test.jsx  bridgeEvents.test.js  popout.test.jsx  terminalFit.test.js  themeData.test.js
web/frontend/src/components/: ActivityRail.jsx  AdminPanel.jsx  ApiKeysPanel.jsx  BridgeModal.jsx  ChatInput.jsx  ChatPane.jsx  CloudSettingsDialog.jsx  ConfirmDialog.jsx  ErrorBoundary.jsx  FleetView.jsx  HexGrid.jsx  HistoryPanel.jsx  LaneQueuePanel.jsx  LocalBrokerView.jsx  LocalMetricsPanel.jsx  LocalModelsPanel.jsx  MessageBubble.jsx  NewSessionDialog.jsx  OnboardingModal.jsx  OpenRouterModal.jsx  PaneActionsMenu.jsx  PopoutTerminal.jsx  ProviderPicker.jsx  Sidebar.jsx  StateIcon.jsx  StatusBar.jsx  (+8 more)
web/static/: index.html  login.html
web/static/css/: base.css
web/static/js/: app.js  hexgrid.js  themes.js
web/tests/: test_bridge_endpoints.py  test_bridge_manager.py  test_bridge_regression.py  test_bridge_typing_gate.py  test_cli_actions_endpoints.py  test_jsonl_staleness.py  test_jsonl_watcher.py  test_local_broker.py  test_provider_lever.py  test_pty_backend.py  test_pty_lock.py  test_pty_manager.py  test_server.py  test_session_state_tracker.py  test_settings_endpoints.py  test_spawn_levers.py  test_usage_tracker.py  test_workflows_endpoint.py  test_ws_single_consumer.py
(+12 files in other folders)
