[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-cockpit"
version = "0.2.4-alpha"
description = "Multi-session Claude Code manager with tabs, containers, and token tracking"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "starlette>=0.41.0",
    "websockets>=13.0",
    "pywinpty>=2.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cockpit = "cockpit.cli:main"
cockpit-web = "cockpit.web_cli:main"

[project.optional-dependencies.test]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
testpaths = ["web/tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/cockpit"]
