[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-cockpit"
version = "1.3.9"
description = "Multi-session Claude Code manager with a FastAPI backend and React/Vite frontend"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "starlette>=0.41.0",
    "websockets>=13.0",
    "pywinpty>=2.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies.test]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
testpaths = ["web/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Test modules deliberately do sys.path manipulation / env var setup before
# importing the modules under test (see conftest-less path bootstrap at the
# top of each test file) — E402 (import not at top) is expected there.
"web/tests/*" = ["E402"]
